--- a/One-Page-Website/css/one_page_website.css
+++ b/One-Page-Website/css/one_page_website.css
@@ -2,6 +2,7 @@ body {
     font-family: sans-serif;
     font-size: 50%;
     background-color: rgb(39, 35, 23);
+    text-align: center;
 }
 
 footer,
@@ -10,12 +11,18 @@ nav {
 }
 
 form [type=text] {
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    border: 5px;
-    border-radius: 50px;
+    width: 150px;
+    height: 15px;
+    margin: 15px;
+    border: line;
+    border-radius: 5%;
     box-shadow: 1px 1px 4px 0 rgba(7, 2, 77, 0.3);
+}
+
+input {
+    width: 100px;
+    margin: 15px;
+    text-align: center;
 }
 
 h1 {
